# SQLEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
grammar/: sql.bnf
src/SqlDb/: CMakeLists.txt
src/SqlDb/src/: main.cpp
src/SqlDbLib/: CMakeLists.txt
src/SqlDbLib/include/SqlDbLib/: Database.h  Export.h  Parser.h  Record.h  Table.h
src/SqlDbLib/src/: AutogenParser.cpp  AutogenParser.h  Database.cpp  Parser.cpp  ParserPrivate.h  Record.cpp  Table.cpp
tools/: GenerateParserFromBNF.py  PrintGraph.py
